--- a/create-task/src/style.css
+++ b/create-task/src/style.css
@@ -11,28 +11,26 @@ body {
   background-attachment: fixed;
 }
 
-.start-screen {
+.startscreen {
   position: fixed;
   inset: 0;
-  background: #000000b3;
   display: flex;
-  align-items: center;
   justify-content: center;
-  z-index: 999;
+  align-items: center;
 }
 
-.play-btn {
-  font-size: 2rem;
+.playbtn {
+  font-size: 26px;
   padding: 20px 40px;
-  border: none;
   border-radius: 16px;
-  background: #7c3aed;
-  color: #000000;
+  background: #ffffff;
+  color: #2a2b35;
   cursor: pointer;
   transition: transform 0.2s ease;
+  border-color: #2a2b35;
+  border-width: 5px;
 }
 
-.play-btn:hover {
+.playbtn:hover {
   transform: scale(1.1);
-  background: #6d28d9;
 }
