--- a/create-task/src/style.css
+++ b/create-task/src/style.css
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-color: bisque;
 }
 
 .startscreen {
@@ -17,6 +18,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #487e8f57;
+  transition: opacity 0.4s ease;
+}
+
+.startscreen.fade-out {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .playbtn {
@@ -27,8 +35,8 @@ body {
   color: #2a2b35;
   cursor: pointer;
   transition: transform 0.2s ease;
-  border-color: #2a2b35;
-  border-width: 5px;
+
+  border: 5px solid #4e4437;
 }
 
 .playbtn:hover {
