--- a/create-task/src/style.css
+++ b/create-task/src/style.css
@@ -126,20 +126,9 @@ body {
   box-shadow: 0 0 30px 10px #ffffffcc;
 }
 
-button.hachiware.active {
-  animation: glow-blue 0.5s ease-in-out;
-}
-
-@keyframes glow-blue {
-  0%,
-  100% {
-    box-shadow: none;
-    background-color: #b0ccdb;
-  }
-  50% {
-    box-shadow: 0 0 25px 12px rgba(132, 163, 209, 0.6);
-    background-color: #c8dfe9;
-  }
+.hachiware.active {
+  filter: brightness(1.1);
+  box-shadow: 0 0 30px 10px #b0ccdb;
 }
 
 .gamebuttons button {
